# cognito-multi-tenant

./: .env  README.md  cognito.py  docker-compose.yml  main.py  managers.py  pyproject.toml  settings.py  setup_local_env.py  storage.py
api_methods/: auth.py  notes.py  tenants.py
dtos/: auth.py  note.py  permissions.py  tenant.py
infrastructure/: samconfig.toml  template.yaml
infrastructure/iam/: samconfig.toml  template.yaml
