[project]
name = "my-article"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.1",
    "boto3-stubs[cognito-idp,dynamodb,s3]>=1.39.3",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
